# cmake-hello-world-example

./: CMakeLists.txt  README.md  clsqrt.cpp  sqrt-config.cmake.in  sqrt.cpp  uninstall.sh
include/: sqrt.h
